<?xml version="1.0"?>
<package format="3">
  <name>common_msgs</name>
  <version>1.0.0</version>
  <description>communication_msgs package.</description>
  <maintainer email="dongyanqiang@rock-ai.com.cn">dongyanqiang</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
